added offset parameter w/ default set to 0

--- a/JQuery_advanced/8-index.html
+++ b/JQuery_advanced/8-index.html
@@ -39,7 +39,7 @@
               $('#searchResults').append(li);
             }
 
-            function queryWikipedia(search) {
+            function queryWikipedia(search, offset = 0) {
               $.ajax({
                 url: "https://en.wikipedia.org/w/api.php",
                 data: {
