--- a/JQuery_advanced/8-index.html
+++ b/JQuery_advanced/8-index.html
@@ -52,15 +52,32 @@
                 dataType: 'jsonp',
                 success: function(response) {
                   let results = response.query.search;
-                  buildPagination(response.query.totalhits, 10, offset);
                   for (let i = 0; i < results.length; i++) {
                     addNewArticle(results[i].pageid, results[i].title, results[i].snippet);
                   }
+                  buildPagination(response.query.totalhits, 10, offset);
                 }
               });
 
               function buildPagination(numberOfItems, itemsPerPage, currentOffset) {
+                let totalPages = Math.ceil(totalItems / itemsPerPage);
+                const paginationList = $('#pagination');
+                paginationList.empty();
 
+                for (let i = 0; i < totalPages; i++) {
+                  const listItem = $('<li/>').text(i + 1);
+                  if ((i * itemsPerPage) === currentOffset) {
+                    listItem.css('font-weight', 'bold');
+                  }
+                  listItem.css({
+                    'cursor': 'pointer',
+                    'margin-left': '10px'
+                  }).on('click', function() {
+                    let offset = ($(this).text() * itemsPerPage) - itemsPerPage;
+                    queryWikipedia($('#searchText').val(), offset);
+                  });
+                  paginationList.append(listItem);
+                }
               }
             }
           $(document).ready(function() {
