change li to ul

--- a/JQuery_advanced/8-index.html
+++ b/JQuery_advanced/8-index.html
@@ -17,7 +17,7 @@
               'value': 'Search'
             });
             const ul = $('<ul>').attr('id', 'searchResults');
-            const ul2 = $('<li>').attr('id', 'pagination');
+            const ul2 = $('<ul>').attr('id', 'pagination');
             form.append(input).append(submit);
 
             $('body').append(form).append(ul).append(ul2);
