--- a/JQuery_advanced/8-index.html
+++ b/JQuery_advanced/8-index.html
@@ -55,30 +55,33 @@
                   for (let i = 0; i < results.length; i++) {
                     addNewArticle(results[i].pageid, results[i].title, results[i].snippet);
                   }
-                  buildPagination(response.query.totalhits, 10, offset);
+                  console.log(response.query.searchinfo.totalhits);
+                  buildPagination(response.query.searchinfo.totalhits, 10, offset);
                 }
               });
             }
 
             function buildPagination(numberOfItems, itemsPerPage, currentOffset) {
+              console.log(numberOfItems);
+              console.log(itemsPerPage);
+              console.log(currentOffset);
               let totalPages = Math.ceil(numberOfItems / itemsPerPage);
-              // let paginationList = $('#pagination');
-              // paginationList.empty();
+              console.log(totalPages);
+              let paginationList = $('#pagination');
+              paginationList.empty();
 
               for (let i = 0; i < totalPages; i++) {
-                let listItem = $('<li>');
-                let pageNumber = $(i + 1);
-                listItem.append(pageNumber);
-                // if ((i * itemsPerPage) === currentOffset) {
-                //   listItem.css('font-weight', 'bold');
-                // }
-                // listItem.css({
-                //   'cursor': 'pointer',
-                //   'margin-left': '10px'
-                // }).on('click', function() {
-                //   let offset = ($(this).text() * itemsPerPage) - itemsPerPage;
-                //   queryWikipedia($('#searchText').val(), offset);
-                // });
+                let listItem = $('<li/>').text(i + 1);
+                if ((i * itemsPerPage) === currentOffset) {
+                  listItem.css('font-weight', 'bold');
+                }
+                listItem.css({
+                  'cursor': 'pointer',
+                  'margin-left': '10px'
+                }).on('click', function() {
+                  let offset = ($(this).text() * itemsPerPage) - itemsPerPage;
+                  queryWikipedia($('#searchText').val(), offset);
+                });
                 $('#pagination').append(listItem);
               }
             }
