pass trye to displayladoing function when querying wikipedia

--- a/JQuery_advanced/9-index.html
+++ b/JQuery_advanced/9-index.html
@@ -52,6 +52,7 @@
           }
 
           function queryWikipedia(search, offset = 0) {
+            displayLoading(true);
             $.ajax({
               url: "https://en.wikipedia.org/w/api.php",
               data: {
