--- a/JQuery_advanced/9-index.html
+++ b/JQuery_advanced/9-index.html
@@ -70,6 +70,9 @@
                 }
                 console.log(response.query.searchinfo.totalhits);
                 buildPagination(response.query.searchinfo.totalhits, 10, offset);
+              },
+              complete: function () {
+                displayLoading(false);
               }
             });
           }
