added list posts function

--- a/JQuery_advanced/10-index.html
+++ b/JQuery_advanced/10-index.html
@@ -22,7 +22,18 @@
         }
 
         function listPosts() {
-
+          $.ajax({
+            url: '/posts',
+            type: 'GET',
+            success: function (response) {
+              response.array.forEach(function(post) {
+                addPostRow(post);
+              });
+            },
+            error: function() {
+              alert('Server Error');
+            }
+          });
         }
 
         $(document).ready(function() {
