--- a/JQuery_advanced/11-index.html
+++ b/JQuery_advanced/11-index.html
@@ -42,7 +42,7 @@
           );
           const div2 = $('<div/>').append(
             $('<label>').attr('for', 'title').text('Title'),
-            div2.append('<textarea>').attr('id', 'title')
+            $('<textarea>').attr('id', 'title')
           );
 
           const submitButton = $('<input>').attr({
