--- a/JQuery_advanced/11-index.html
+++ b/JQuery_advanced/11-index.html
@@ -62,7 +62,17 @@
         }
 
         function sendForm() {
+          const author = $('#author').val();
+          const title = $('#title').val();
 
+          $.post('http://localhost:3000/posts', {author: author, title: title})
+            .done(function (data) {
+              console.log('Post created:', data);
+              listPosts();
+            })
+            .fail(function () {
+              alert('Failed to create post');
+            });
         }
 
         $(document).ready(function() {
