--- a/JQuery_advanced/12-index.html
+++ b/JQuery_advanced/12-index.html
@@ -17,6 +17,8 @@
       <script type="application/javascript">
         function addPostRow(data) {
           const p = $('<p/>').append('<span/>').text('Post created with id ' + data.id + ' title: ' + data.title + ', author: ' + data.author);
+          p.attr('id', 'row-ID');
+          p.prepend($('<span>').text('(delete)'));
           $('body').append(p);
         }
 
@@ -87,7 +89,7 @@
         }
 
         function deletePost(id) {
-
+          $.remove()
         }
 
         $(document).ready(function() {
