restructuring cookies and storage

--- a/Cookies_local_storage/0-index.html
+++ b/Cookies_local_storage/0-index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8" />
         <title>Task 0</title>
-        <script src="src/index.js" defer></script>
+        <!-- <script src="src/index.js" defer></script> -->
     </head>
 
     <body>
@@ -15,6 +15,18 @@
       <button id="logInButton">Log me in</button>
       <h2>Cookies</h2>
       <button id="showCookiesButton">Show the cookies</button>
+
+      <!-- <script>
+        function toggleFormVisibility() {
+          if (isLoggedIn()) {
+            document.getElementById('loginForm').style.display = 'none';
+            document.getElementById('loggedInForm').style.display = 'block';
+          } else {
+            document.getElementById('loginForm').style.display = 'block';
+            document.getElementById('loggedInForm').style.display = 'none';
+          }
+        }
+      </script> -->
     </body>
 
 </html>
