--- a/Cookies_local_storage/4-index.html
+++ b/Cookies_local_storage/4-index.html
@@ -18,6 +18,9 @@
       </div>
       <!-- <h2>Cookies</h2>
       <button id="showCookiesButton">Show the cookies</button> -->
+      <script>
+
+      </script>
     </body>
 
 </html>
