added showcookies function

--- a/Cookies_local_storage/0-index.html
+++ b/Cookies_local_storage/0-index.html
@@ -15,6 +15,9 @@
       <button id="logInButton">Log me in</button>
       <h2>Cookies</h2>
       <button id="showCookiesButton">Show the cookies</button>
+      <div id="cookiesList">
+
+      </div>
 
     </body>
 
