--- a/Cookies_local_storage/0-index.html
+++ b/Cookies_local_storage/0-index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Task 0</title>
-        <script src="src/index.js" defer></script>
+        <!-- <script src="src/index.js" defer></script> -->
     </head>
 
     <body>
@@ -13,6 +13,10 @@
       <button id="logInButton">Log me in</button>
       <h1>Cookies</h1>
       <button id="showCookiesButton">Show the cookies</button>
+
+      <script>
+
+      </script>
     </body>
 
 </html>
