emptied index js and put script

--- a/Cookies_local_storage/1-index.html
+++ b/Cookies_local_storage/1-index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8" />
         <title>Task 1</title>
-        <script src="src/index.js" defer></script>
+        <!-- <script src="src/index.js" defer></script> -->
     </head>
 
     <body>
@@ -15,6 +15,7 @@
       <button id="logInButton">Log me in</button>
       <h2>Cookies</h2>
       <button id="showCookiesButton">Show the cookies</button>
+
       <script>
         function setCookies() {
           var firstNameInput = document.getElementById('firstname').value;
