--- a/Cookies_local_storage/3-index.html
+++ b/Cookies_local_storage/3-index.html
@@ -64,7 +64,9 @@
         }
 
         function deleteCookiesAndShowForm() {
-
+          document.cookie = 'firstname=; expires=Tue, 01 June 1995 06:00:00 UTC; path=/;';
+          document.cookie = 'email=; expires=Tue, 01 June 1995 06:00:00 UTC; path=/;';
+          showForm();
         }
 
         function showWelcomeMessageForm() {
