added function call to setcookies

--- a/Cookies_local_storage/3-index.html
+++ b/Cookies_local_storage/3-index.html
@@ -27,6 +27,7 @@
           var expireUTC = now.toUTCString();
           document.cookie = 'firstname=' + firstNameInput + '; expires=' + expireUTC +'; path=/;';
           document.cookie = 'email=' + emailInput + '; expires='+ expireUTC +'; path=/;';
+          showWelcomeMessageForm();
         }
 
         function showCookies() {
