added jsdeliver cdn

--- a/Cookies_local_storage/4-index.html
+++ b/Cookies_local_storage/4-index.html
@@ -5,8 +5,8 @@
 
         <meta charset="utf-8" />
         <title>Task 4</title>
-        <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js" defer></script>
-        <script src="src/index.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/src/js.cookie.min.js"></script>
+        <!-- <script src="src/index.js" defer></script> -->
     </head>
 
     <body>
@@ -16,9 +16,94 @@
         <input type="text" id="email">
         <button id="logInButton">Log me in</button>
       </div>
-      <!-- <h2>Cookies</h2>
-      <button id="showCookiesButton">Show the cookies</button> -->
+      <h2>Cookies</h2>
+      <button id="showCookiesButton">Show the cookies</button>
+
       <script>
+        function setCookies() {
+          var firstNameInput = document.getElementById('firstname').value;
+          var emailInput = document.getElementById('email').value;
+          var now = new Date();
+          now.setDate(now.getDate() + 10);
+          var expireUTC = now.toUTCString();
+          document.cookie = 'firstname=' + firstNameInput + '; expires=' + expireUTC +'; path=/;';
+          document.cookie = 'email=' + emailInput + '; expires='+ expireUTC +'; path=/;';
+          showWelcomeMessageForm();
+        }
+
+        function showCookies() {
+          var cookies = document.cookie.split(';');
+          var paragraph = document.createElement('p');
+
+          cookies.forEach(function(cookie) {
+
+            const email = getCookies('email');
+            const firstName = getCookies('firstname');
+            paragraph.innerHTML = 'Email: ' + email + ' - Firstname: ' +  firstName;
+            document.body.appendChild(paragraph);
+          });
+        }
+
+        function getCookies(name) {
+          var cookies = document.cookie.split(';');
+          for (let i = 0; i < cookies.length; i++) {
+            let cookie = cookies[i].trim();
+            if (cookie.startsWith(name + '=')) {
+              return decodeURIComponent(cookie.substring(name.length + 1));
+            }
+          }
+          return null;
+        }
+
+        function showForm() {
+          var loginForm = document.getElementById('loginForm');
+          loginForm.style.display = 'block';
+        }
+
+        function hideForm(){
+          var loginForm = document.getElementById('loginForm');
+          loginForm.style.display = 'none';
+        }
+
+        function deleteCookiesAndShowForm() {
+          document.cookie = 'firstname=; expires=Tue, 01 June 1995 06:00:00 UTC; path=/;';
+          document.cookie = 'email=; expires=Tue, 01 June 1995 06:00:00 UTC; path=/;';
+          showForm();
+        }
+
+        function showWelcomeMessageForm() {
+          var email = getCookies('email');
+          var firstName = getCookies('firstname');
+
+          if (firstName && email) {
+            var welcomeMessage = document.createElement('h1');
+            welcomeMessage.textContent = 'Welcome ' + firstName + ' ';
+            var logoutLink = document.createElement('a');
+            logoutLink.textContent = '(logout)';
+            logoutLink.style.fontStyle = 'italic';
+            logoutLink.style.fontWeight = 'normal';
+            logoutLink.style.marginLeft = '10px';
+            logoutLink.href = '#';
+            logoutLink.addEventListener('click', function (event) {
+              event.preventDefault();
+              deleteCookiesAndShowForm();
+            });
+
+            welcomeMessage.appendChild(logoutLink);
+            document.body.innerHTML = '';
+            document.body.appendChild(welcomeMessage);
+          } else {
+            showForm();
+          }
+        }
+
+        document.getElementById('logInButton').addEventListener('click', function() {
+          setCookies();
+        });
+
+        document.getElementById('showCookiesButton').addEventListener('click', function() {
+          showCookies();
+        });
 
       </script>
     </body>
