--- a/Cookies_local_storage/4-index.html
+++ b/Cookies_local_storage/4-index.html
@@ -20,14 +20,15 @@
       <button id="showCookiesButton">Show the cookies</button>
 
       <script>
-        function setCookies() {
+        function setCookiesAndShowWelcomeMessage() {
           var firstNameInput = document.getElementById('firstname').value;
           var emailInput = document.getElementById('email').value;
           var now = new Date();
           now.setDate(now.getDate() + 10);
           var expireUTC = now.toUTCString();
-          document.cookie = 'firstname=' + firstNameInput + '; expires=' + expireUTC +'; path=/;';
-          document.cookie = 'email=' + emailInput + '; expires='+ expireUTC +'; path=/;';
+
+          Cookies.set('firstname', firstNameInput, { expires: 10 });
+          Cookies.set('email', emailInput, { expires: 10 });
           showWelcomeMessageForm();
         }
 
