removed cookies using cdn

--- a/Cookies_local_storage/4-index.html
+++ b/Cookies_local_storage/4-index.html
@@ -64,8 +64,8 @@
         }
 
         function deleteCookiesAndShowForm() {
-          document.cookie = 'firstname=; expires=Tue, 01 June 1995 06:00:00 UTC; path=/;';
-          document.cookie = 'email=; expires=Tue, 01 June 1995 06:00:00 UTC; path=/;';
+          Cookies.remove('firstname');
+          Cookies.remove('email');
           showForm();
         }
 
