--- a/Cookies_local_storage/5-index.html
+++ b/Cookies_local_storage/5-index.html
@@ -5,12 +5,22 @@
 
         <meta charset="utf-8" />
         <title>Task 5</title>
-        <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/src/js.cookie.min.js"></script>
         <!-- <script src="src/index.js" defer></script> -->
     </head>
 
     <body>
 
+      <script>
+        function isLocalStorageSupported() {
+          try {
+            localStorage.setItem('test', 'test');
+            localStorage.removeItem('test');
+            return true;
+          } catch (e) {
+            return false;
+          }
+        }
+      </script>
     </body>
 
 </html>
