added correct add item function and createstore function

--- a/Cookies_local_storage/5-index.html
+++ b/Cookies_local_storage/5-index.html
@@ -20,8 +20,12 @@
             return false;
           }
         }
-
         function addItemToCart(item) {
+          localStorage.setItem(item, true);
+          displayCart();
+        }
+
+        function createStore() {
           var items = ['Shampoo', 'Soap', 'Sponge', 'Water'];
           var ul = document.createElement('ul');
 
