added getcartfrom storage function

--- a/Cookies_local_storage/7-index.html
+++ b/Cookies_local_storage/7-index.html
@@ -24,6 +24,15 @@
 
         var items = ['Shampoo', 'Soap', 'Sponge', 'Water'];
 
+        function getCartFromStorage() {
+          var cart = sessionStorage.getItem('cart');
+          if (cart) {
+            return JSON.parse(cart);
+          } else {
+            return {};
+          }
+        }
+
         function addItemToCart(item) {
           sessionStorage.setItem(item, true);
           displayCart();
