edited add item to cart function to handle adding the the same item multiple times and storing the quantity

--- a/Cookies_local_storage/7-index.html
+++ b/Cookies_local_storage/7-index.html
@@ -34,7 +34,13 @@
         }
 
         function addItemToCart(item) {
-          sessionStorage.setItem(item, true);
+          var cart = getCartFromStorage();
+          if (cart[item]) {
+            cart[item] += 1;
+          } else {
+            cart[item] = 1
+          }
+          sessionStorage.setItem('cart', JSON.stringify(cart));
           displayCart();
         }
 
