added clearCart function

--- a/Cookies_local_storage/7-index.html
+++ b/Cookies_local_storage/7-index.html
@@ -44,6 +44,11 @@
           displayCart();
         }
 
+        function clearCart() {
+          sessionStorage.removeItem('cart');
+          displayCart();
+        }
+
         function createStore() {
           var ul = document.createElement('ul');
 
