--- a/Cookies_local_storage/7-index.html
+++ b/Cookies_local_storage/7-index.html
@@ -81,18 +81,15 @@
           h2.textContent = 'Your cart:';
           var emptyDiv = document.createElement('div');
 
-          var cart = Object.keys(sessionStorage);
-          var cartCount = cart.length;
-
-          if (cartCount > 0) {
-            var p = document.createElement('p');
-            p.textContent = 'You previously had ' + cartCount + ' items in your cart';
-            document.body.appendChild(p);
-          }
+          updateCart();
         }
 
         function updateCart() {
-
+          var cart = getCartFromStorage();
+          if (Object.keys(cart).length === 0) {
+            var empty = document.createElement('p');
+            empty.textContent = 'Your cart is empty';
+          }
         }
 
         createStore();
